Added some validation messages

--- a/client/src/locales/en.json
+++ b/client/src/locales/en.json
@@ -1,23 +1,32 @@
 {
-  "Received": "Received",
-  "Pending": "Pending",
-  "Ordered": "Ordered",
-  "Completed": "Completed",
-  "Sent": "Sent",
-  "Addition": "Addition",
-  "Subtraction": "Subtraction",
-  "Approved": "Approved",
-  "Not Approved": "Not Approved",
-  "Exclusive": "Exclusive",
-  "Inclusive": "Inclusive",
-  "Fixed": "Fixed",
-  "Percent": "Percent %",
-  "Cash": "Cash",
-  "Cheque": "Cheque",
-  "Credit Card": "Credit Card",
-  "Westrn Union": "Westrn Union",
-  "Bank Transfer": "Bank Transfer",
-  "Paid": "Paid",
-  "Unpaid": "Unpaid",
-  "Partial": "Partial"
+	"Received": "Received",
+	"Pending": "Pending",
+	"Ordered": "Ordered",
+	"Completed": "Completed",
+	"Sent": "Sent",
+	"Addition": "Addition",
+	"Subtraction": "Subtraction",
+	"Approved": "Approved",
+	"Not Approved": "Not Approved",
+	"Exclusive": "Exclusive",
+	"Inclusive": "Inclusive",
+	"Fixed": "Fixed",
+	"Percent": "Percent %",
+	"Cash": "Cash",
+	"Cheque": "Cheque",
+	"Credit Card": "Credit Card",
+	"Westrn Union": "Westrn Union",
+	"Bank Transfer": "Bank Transfer",
+	"Paid": "Paid",
+	"Unpaid": "Unpaid",
+	"Partial": "Partial",
+	"validation": {
+		"required": "{attr} required",
+		"minLength": "{attr} must be greater than or equal {value} characters",
+		"maxLength": "{attr} must be less than or equal {value} characters",
+		"minValue": "{attr} should be greater than or equal {value}",
+		"maxValue": "{attr} should be greater than or equal {value}",
+		"numeric": "{attr} must be a valid number",
+		"email": "{attr} not valid"
+	}
 }
